@@ -1,3 +1,5 @@
+* Add `fractionDigits` argument to fuse.Number#round. [Prototype LH #830] [jddalton, Radoslav Stankov]
+
 * Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]
 
 * Rename the fuse.dom.Data object to fuse.dom.data. [jddalton]
